--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
       background: radial-gradient(circle at 30% 30%, #1a0003 0%, #000 75%);
       color: var(--text-main);
       font-family: 'Rajdhani', system-ui, sans-serif;
-      overflow: hidden;
+      overflow-x: hidden;  /* allow scroll but prevent sideways */
+      overflow-y: auto;
     }
 
     canvas#particles { position:fixed; inset:0; z-index:1; pointer-events:none; }
@@ -53,7 +54,11 @@
     }
 
     .screen {
-      position:fixed; inset:0;
+      position:absolute;
+      top:0;
+      left:0;
+      width:100%;
+      min-height:100dvh;
       display:none;
       align-items:center;
       justify-content:center;
@@ -187,12 +192,40 @@
 
     input[type="text"]{
       width:100%;
-      padding:0.6rem 0.8rem;
+      padding:0.8rem 1rem;
       border-radius:0.6rem;
       border:1px solid rgba(255,255,255,0.25);
       background:rgba(0,0,0,0.8);
       color:var(--text-main);
-      font-size:0.9rem;
+      font-size:1.1rem;
+    }
+
+    /* Mobile optimizations */
+    @media (max-width: 480px) {
+      .card {
+        padding:2rem 1.2rem;
+        border-radius:1.2rem;
+        max-height:none;        /* allow full scroll if needed */
+      }
+
+      button,
+      .btn-link {
+        padding:0.8rem 1.2rem;
+        font-size:0.9rem;
+      }
+
+      h2 {
+        font-size:1.4rem;
+      }
+
+      p {
+        font-size:1rem;
+      }
+
+      .sigils span {
+        font-size:2.5rem !important;
+        opacity:0.08 !important;
+      }
     }
   </style>
 </head>
