--- a/index.html
+++ b/index.html
@@ -37,20 +37,25 @@
       background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='180' height='180'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='1.3' numOctaves='4'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23n)' opacity='0.38'/%3E%3C/svg%3E");
     }
 
-    .sigils span {
+    /* SIGILS (background icons) */
+    .sigil {
       position:absolute;
       font-family:'Orbitron';
       opacity:0.2;
       color:var(--accent);
       text-shadow:0 0 35px var(--accent);
-      animation:drift 22s infinite linear;
       user-select:none;
       z-index:3;
+      --dx: 0px;
+      --dy: 0px;
+      transform: translate(var(--dx), var(--dy));
+      transition: transform 0.15s ease-out;
+      pointer-events:none;
     }
 
-    @keyframes drift {
-      from { transform:translate(0,0) rotate(0deg); }
-      to   { transform:translate(25px,-35px) rotate(5deg); }
+    /* Center sigil needs to stay centered but still parallax */
+    .sigil-center {
+      transform: translate(calc(-50% + var(--dx)), calc(-50% + var(--dy)));
     }
 
     .screen {
@@ -235,7 +240,7 @@
         font-size:1rem;
       }
 
-      .sigils span {
+      .sigil {
         font-size:2.5rem !important;
         opacity:0.08 !important;
       }
@@ -250,11 +255,11 @@
 
   <!-- SIGILS -->
   <div class="sigils">
-    <span style="top:12%;left:10%;font-size:5rem;">☣</span>
-    <span style="top:65%;right:12%;font-size:4rem;">†</span>
-    <span style="bottom:14%;left:18%;font-size:3.8rem;">3:13</span>
-    <span style="top:28%;right:8%;font-size:3.2rem;">⚠</span>
-    <span style="top:50%;left:50%;transform:translate(-50%,-50%);font-size:7rem;opacity:0.3;">OP 3:13</span>
+    <span class="sigil" style="top:12%;left:10%;font-size:5rem;">☣</span>
+    <span class="sigil" style="top:65%;right:12%;font-size:4rem;">†</span>
+    <span class="sigil" style="bottom:14%;left:18%;font-size:3.8rem;">3:13</span>
+    <span class="sigil" style="top:28%;right:8%;font-size:3.2rem;">⚠</span>
+    <span class="sigil sigil-center" style="top:50%;left:50%;font-size:7rem;opacity:0.3;">OP 3:13</span>
   </div>
 
   <button id="soundBtn" onclick="toggleSound()">🔊</button>
@@ -910,6 +915,34 @@
         playBeep("error");
       }
     }
+
+    /* PARALLAX SIGILS (pointer reactive, subtle) */
+    (function setupSigilParallax() {
+      const sigils = document.querySelectorAll('.sigil');
+      if (!sigils.length) return;
+
+      function handlePointerMove(e) {
+        const w = window.innerWidth || 1;
+        const h = window.innerHeight || 1;
+        const xNorm = (e.clientX / w) - 0.5; // -0.5 to 0.5
+        const yNorm = (e.clientY / h) - 0.5;
+
+        sigils.forEach((el, index) => {
+          const intensity = 10 + index * 2; // subtle, slightly different per sigil
+          const dx = (-xNorm * intensity).toFixed(2) + 'px';
+          const dy = (-yNorm * intensity).toFixed(2) + 'px';
+          el.style.setProperty('--dx', dx);
+          el.style.setProperty('--dy', dy);
+        });
+      }
+
+      // Only react on devices with a real pointer (mouse, trackpad)
+      window.matchMedia('(pointer:fine)').addEventListener('change', () => {
+        // no-op, but keeps it future-proof if you want to toggle
+      });
+
+      document.addEventListener('pointermove', handlePointerMove);
+    })();
   </script>
 </body>
 </html>
